Add initial CV website files

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	</table>
 	<hr>
 	<p>
-<a href="contactme.html">Contact details</a>
+<a href="contactme.html">Contact-details</a>
 	</p>
 <hr />
 </body>
